# zksync-era

./: Cargo.toml
.github/release-please/: manifest.json
.github/workflows/: new-build-contract-verifier-template.yml  new-build-core-template.yml  new-build-prover-template.yml  secrets_scanner.yaml
core/latest/: print.html
core/lib/config/src/: testonly.rs
core/lib/config/src/configs/: general.rs  mod.rs
core/lib/multivm/: Cargo.toml
core/lib/multivm/src/versions/: testonly.rs
core/lib/multivm/src/versions/vm_fast/: call_tracer.rs
core/lib/protobuf_config/src/: general.rs  lib.rs
core/lib/protobuf_config/src/proto/config/: general.proto
core/lib/snapshots_applier/src/: lib.rs
core/lib/types/src/: snapshots.rs
core/lib/zksync_core_leftovers/src/temp_config_store/: mod.rs
core/node/eth_sender/src/: eth_tx_aggregator.rs
core/node/genesis/src/: lib.rs  utils.rs
core/node/state_keeper/src/io/seal_logic/: l2_block_seal_subtasks.rs
core/node/state_keeper/src/updates/: l2_block_updates.rs
docker/circuit-prover-gpu/: Dockerfile
docker/proof-fri-gpu-compressor/: Dockerfile
docs/src/: SUMMARY.md
etc/env/base/: chain.toml
etc/env/file_based/: genesis.yaml
prover/: CHANGELOG.md  Cargo.toml
prover/crates/lib/circuit_prover_service/: Cargo.toml
prover/crates/lib/circuit_prover_service/src/gpu_circuit_prover/: gpu_circuit_prover_executor.rs
prover/crates/lib/circuit_prover_service/src/types/: circuit.rs
prover/crates/lib/snarkify_prover/: Cargo.toml
prover/crates/lib/snarkify_prover/src/: lib.rs  types.rs
zkstack_cli/: CHANGELOG.md
(+6 files in other folders)
